package org.infnet_dr2_tp1.factory;

public class DVD implements LibraryItem {
    private String id;
    private String title;
    private double size;
}
