package org.infnet_dr2_tp1.factory;

public interface LibraryItem {
}


