package org.infnet_dr2_tp1.factory;

public abstract class LibraryItemFactory {
    abstract LibraryItem create();
}
