package org.infnet_dr2_tp1.strategy;

import lombok.Getter;

@Getter
public class User {
    private String name;
    private String id;
}
